--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -126,7 +126,7 @@ html, body {
     bottom: 32px;
     left: 32px; }
 
-@media only screen and (max-device-width: 1279px) {
+@media all and (max-width: 1279px) {
   html, body {
     font-size: 14px; }
   .ttexp-btn span {
@@ -151,7 +151,7 @@ html, body {
     bottom: 28px;
     left: 28px; } }
 
-@media only screen and (max-device-width: 1023px) {
+@media all and (max-width: 1023px) {
   html, body {
     font-size: 12px; }
   .ttexp-btn span {
@@ -176,7 +176,7 @@ html, body {
     bottom: 18px;
     left: 18px; } }
 
-@media only screen and (max-device-width: 639px) {
+@media all and (max-width: 639px) {
   html, body {
     font-size: 10px; }
   .ttexp-btn span {
