--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -17,6 +17,26 @@ html, body {
     color: #ffffff;
     font-size: 32px; }
 
+::-webkit-scrollbar {
+  width: 14px; }
+
+::-webkit-scrollbar-thumb {
+  border: 4px solid transparent;
+  background-clip: padding-box;
+  -webkit-border-radius: 7px;
+  background-color: rgba(255, 255, 255, 0.6); }
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.8); }
+
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none; }
+
+::-webkit-scrollbar-corner {
+  background-color: transparent; }
+
 .ttexp-position-absolute {
   position: absolute;
   z-index: 1000; }
