--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -79,6 +79,7 @@ html, body {
   background-color: #000000; }
   .page-play #video-container {
     overflow: hidden;
+    width: 100%;
     height: 100%;
     position: absolute;
     top: 0px;
