--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -5,7 +5,7 @@
   font-family: 'Titillium Web';
   font-style: normal;
   font-weight: 200;
-  src: url("fonts/TitilliumWeb-Regular.ttf"); }
+  src: url("./fonts/TitilliumWeb-Regular.ttf"); }
 
 html, body {
   font-family: 'Titillium Web', sans-serif;
@@ -140,7 +140,7 @@ html, body {
       right: 0;
       position: absolute;
       z-index: -1;
-      background-image: url("/assets/images/background-text-version.jpg");
+      background-image: url("./images/background-text-version.jpg");
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: left center;
@@ -237,7 +237,7 @@ html, body {
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     transform-style: preserve-3d;
-    background-image: url("/assets/images/results.png");
+    background-image: url("./images/results.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
