--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -1,353 +1,6 @@
 /* http://www.sitepoint.com/architecture-sass-project/ */
 @CHARSET "UTF-8";
 /* http://zerosixthree.se/vertical-align-anything-with-just-3-lines-of-css/ */
-@font-face {
-  font-family: 'Titillium Web';
-  font-style: normal;
-  font-weight: 200;
-  src: url("./fonts/TitilliumWeb-Regular.ttf"); }
-
-html,
-body {
-  font-family: 'Titillium Web', sans-serif;
-  font-size: 16px;
-  color: fff;
-  cursor: default; }
-
-a,
-a:link,
-a:visited,
-a:hover,
-a:active {
-  color: inherit;
-  text-decoration: none; }
-
-html,
-body {
-  background-color: 000; }
-
-.table td.fit,
-.table th.fit {
-  white-space: nowrap;
-  width: 1%; }
-
-.glyphicon.disabled {
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-  /* For IE8 and earlier */ }
-
-[data-ember-action]:not(:disabled) {
-  cursor: pointer; }
-
-.ttexp-btn {
-  padding: 0; }
-  .ttexp-btn span {
-    color: #ffffff;
-    font-size: 32px; }
-
-::-webkit-scrollbar {
-  width: 14px; }
-
-::-webkit-scrollbar-thumb {
-  border: 4px solid transparent;
-  background-clip: padding-box;
-  -webkit-border-radius: 7px;
-  background-color: rgba(255, 255, 255, 0.6); }
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(255, 255, 255, 0.8); }
-
-::-webkit-scrollbar-button {
-  width: 0;
-  height: 0;
-  display: none; }
-
-::-webkit-scrollbar-corner {
-  background-color: transparent; }
-
-.ttexp-position-absolute {
-  position: absolute;
-  z-index: 1000; }
-  .ttexp-position-absolute.top-left {
-    top: 0px;
-    left: 0px; }
-  .ttexp-position-absolute.bottom-left {
-    bottom: 0px;
-    left: 0px; }
-  .ttexp-position-absolute.top-right {
-    top: 0px;
-    right: 0px; }
-  .ttexp-position-absolute.bottom-right {
-    bottom: 0px;
-    right: 0px; }
-
-.ttexp-vertical-menu {
-  width: 100%;
-  max-width: 240px;
-  margin: 0 auto; }
-  .ttexp-vertical-menu li {
-    text-align: center; }
-
-html, body {
-  background-color: #fffffff;
-  margin: 0;
-  padding: 0;
-  overflow: hidden; }
-
-.ember-view {
-  /* 	width: 100%; */
-  /* 	height: 100%; */
-  /* 	overflow: hidden; */ }
-
-/* http://willschenk.com/bootstrap-advanced-grid-tricks/ */
-.page-index #logo-app {
-  margin-top: 10px;
-  text-align: center; }
-
-.page-index #main-menu {
-  margin: 0 auto;
-  text-align: center;
-  text-transform: uppercase; }
-
-.page-index #main-content {
-  margin: 137px auto 10px; }
-
-.page-index #customer-logo {
-  bottom: 32px;
-  left: 32px; }
-
-.page-play {
-  background-color: #000000; }
-  .page-play #video-container {
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 100;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d; }
-    .page-play #video-container #video-player {
-      max-height: 100%;
-      position: relative;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%); }
-    .page-play #video-container.cinemaOn {
-      width: 100%; }
-      .page-play #video-container.cinemaOn #video-player {
-        max-width: 100%;
-        width: 100%; }
-  .page-play #text-container {
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 101;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d; }
-    .page-play #text-container::after {
-      content: "";
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      position: absolute;
-      z-index: -1;
-      background-image: url("./images/background-text-version.jpg");
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: left center;
-      background-size: cover;
-      opacity: 0.35; }
-    .page-play #text-container #text-dialog {
-      padding: 80px 40px;
-      color: #fff;
-      min-width: 70%;
-      width: calc(100% - 380px);
-      position: relative;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%);
-      font-size: 2em;
-      text-align: center; }
-      .page-play #text-container #text-dialog #text-baloon {
-        display: inline-block;
-        margin: 0 auto;
-        max-width: 660px;
-        text-align: justify;
-        text-justify: inter-word; }
-      .page-play #text-container #text-dialog #scores-button {
-        padding-top: 1em; }
-        .page-play #text-container #text-dialog #scores-button .btn {
-          font-size: inherit; }
-  .page-play #side-chat {
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: 200;
-    height: 100%;
-    width: 380px;
-    max-width: 30%;
-    background-color: rgba(9, 9, 9, 0.7);
-    padding: 0;
-    padding-top: 96px; }
-    .page-play #side-chat #chat-options {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-      overflow: auto; }
-      .page-play #side-chat #chat-options li {
-        text-align: justify;
-        text-justify: inter-word;
-        color: #ffffff;
-        background-color: transparent;
-        border: none;
-        -webkit-border-radius: 0;
-        -moz-border-radius: 0;
-        -ms-border-radius: 0;
-        border-radius: 0;
-        border-top: 1px solid #ffffff;
-        padding: 0;
-        margin: 0;
-        padding-top: 32px;
-        padding-bottom: 32px;
-        margin-left: 32px;
-        margin-right: 32px; }
-        .page-play #side-chat #chat-options li:first-child {
-          border-top-width: 3px; }
-  .page-play #side-chat.minimized {
-    width: 64px; }
-    .page-play #side-chat.minimized #chat-options,
-    .page-play #side-chat.minimized #button-audio {
-      display: none; }
-    .page-play #side-chat.minimized #button-chat {
-      left: 16px; }
-  .page-play #button-close {
-    top: 32px;
-    left: 32px; }
-  .page-play #button-chat {
-    top: 32px;
-    left: 32px; }
-  .page-play #button-audio {
-    top: 32px;
-    right: 32px; }
-  .page-play #customer-logo {
-    bottom: 32px;
-    left: 32px; }
-
-.page-scores {
-  background-color: #000000; }
-  .page-scores #scores-container {
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 100;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    background-image: url("./images/results.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center center;
-    background-size: cover; }
-  .page-scores #button-close {
-    top: 32px;
-    left: 32px; }
-  .page-scores #button-audio {
-    top: 32px;
-    right: 32px; }
-  .page-scores #customer-logo {
-    bottom: 32px;
-    left: 32px;
-    alpha: 0.5; }
-
-@media all and (max-width: 1279px) {
-  html, body {
-    font-size: 14px; }
-  .ttexp-btn span {
-    font-size: 28px; }
-  .page-play #side-chat {
-    padding-top: 84px; }
-    .page-play #side-chat #chat-options li {
-      padding-top: 28px;
-      padding-bottom: 28px;
-      margin-left: 28px;
-      margin-right: 28px; }
-  .page-play #button-close {
-    top: 28px;
-    left: 28px; }
-  .page-play #button-chat {
-    top: 28px;
-    left: 28px; }
-  .page-play #button-audio {
-    top: 28px;
-    right: 28px; }
-  .page-play #customer-logo {
-    bottom: 28px;
-    left: 28px; } }
-
-@media all and (max-width: 1023px) {
-  html, body {
-    font-size: 12px; }
-  .ttexp-btn span {
-    font-size: 18px; }
-  .page-play #side-chat {
-    padding-top: 54px; }
-    .page-play #side-chat #chat-options li {
-      padding-top: 18px;
-      padding-bottom: 18px;
-      margin-left: 18px;
-      margin-right: 18px; }
-  .page-play #button-close {
-    top: 18px;
-    left: 18px; }
-  .page-play #button-chat {
-    top: 18px;
-    left: 18px; }
-  .page-play #button-audio {
-    top: 18px;
-    right: 18px; }
-  .page-play #customer-logo {
-    bottom: 18px;
-    left: 18px; } }
-
-@media all and (max-width: 639px) {
-  html, body {
-    font-size: 10px; }
-  .ttexp-btn span {
-    font-size: 14px; }
-  .page-play #side-chat {
-    padding-top: 42px; }
-    .page-play #side-chat #chat-options li {
-      padding-top: 14px;
-      padding-bottom: 14px;
-      margin-left: 14px;
-      margin-right: 14px; }
-  .page-play #button-close {
-    top: 14px;
-    left: 14px; }
-  .page-play #button-chat {
-    top: 14px;
-    left: 14px; }
-  .page-play #button-audio {
-    top: 14px;
-    right: 14px; }
-  .page-play #customer-logo {
-    bottom: 14px;
-    left: 14px; } }
-
 /*!
  * bootswatch v3.3.6
  * Homepage: http://bootswatch.com
@@ -7296,3 +6949,350 @@ a.list-group-item-danger.active:focus {
 .panel-warning .panel-heading,
 .panel-info .panel-heading {
   border-color: #000; }
+
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 200;
+  src: url("./fonts/TitilliumWeb-Regular.ttf"); }
+
+html,
+body {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 16px;
+  color: fff;
+  cursor: default; }
+
+a,
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
+  text-decoration: none; }
+
+html,
+body {
+  background-color: 000; }
+
+.table td.fit,
+.table th.fit {
+  white-space: nowrap;
+  width: 1%; }
+
+.glyphicon.disabled,
+.disabled .glyphicon {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+  /* For IE8 and earlier */ }
+
+[data-ember-action]:not(:disabled) {
+  cursor: pointer; }
+
+.ttexp-btn {
+  padding: 0; }
+  .ttexp-btn span {
+    color: #ffffff;
+    font-size: 32px; }
+
+::-webkit-scrollbar {
+  width: 14px; }
+
+::-webkit-scrollbar-thumb {
+  border: 4px solid transparent;
+  background-clip: padding-box;
+  -webkit-border-radius: 7px;
+  background-color: rgba(255, 255, 255, 0.6); }
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.8); }
+
+::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none; }
+
+::-webkit-scrollbar-corner {
+  background-color: transparent; }
+
+.ttexp-position-absolute {
+  position: absolute;
+  z-index: 1000; }
+  .ttexp-position-absolute.top-left {
+    top: 0px;
+    left: 0px; }
+  .ttexp-position-absolute.bottom-left {
+    bottom: 0px;
+    left: 0px; }
+  .ttexp-position-absolute.top-right {
+    top: 0px;
+    right: 0px; }
+  .ttexp-position-absolute.bottom-right {
+    bottom: 0px;
+    right: 0px; }
+
+.ttexp-vertical-menu {
+  width: 100%;
+  max-width: 240px;
+  margin: 0 auto; }
+  .ttexp-vertical-menu li {
+    text-align: center; }
+
+html, body {
+  background-color: #fffffff;
+  margin: 0;
+  padding: 0;
+  overflow: hidden; }
+
+.ember-view {
+  /* 	width: 100%; */
+  /* 	height: 100%; */
+  /* 	overflow: hidden; */ }
+
+/* http://willschenk.com/bootstrap-advanced-grid-tricks/ */
+.page-index #logo-app {
+  margin-top: 10px; }
+
+.page-index #main-menu {
+  margin: 0 auto 10px;
+  text-align: center;
+  text-transform: uppercase; }
+
+.page-index #main-content {
+  margin: 0 auto 10px; }
+
+.page-index #customer-logo {
+  bottom: 32px;
+  left: 32px; }
+
+.page-play {
+  background-color: #000000; }
+  .page-play #video-container {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d; }
+    .page-play #video-container #video-player {
+      max-height: 100%;
+      position: relative;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%); }
+    .page-play #video-container.cinemaOn {
+      width: 100%; }
+      .page-play #video-container.cinemaOn #video-player {
+        max-width: 100%;
+        width: 100%; }
+  .page-play #text-container {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 101;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d; }
+    .page-play #text-container::after {
+      content: "";
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      position: absolute;
+      z-index: -1;
+      background-image: url("./images/background-text-version.jpg");
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: left center;
+      background-size: cover;
+      opacity: 0.35; }
+    .page-play #text-container #text-dialog {
+      padding: 80px 40px;
+      color: #fff;
+      min-width: 70%;
+      width: calc(100% - 380px);
+      position: relative;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      font-size: 2em;
+      text-align: center; }
+      .page-play #text-container #text-dialog #text-baloon {
+        display: inline-block;
+        margin: 0 auto;
+        max-width: 660px;
+        text-align: justify;
+        text-justify: inter-word; }
+      .page-play #text-container #text-dialog #scores-button {
+        padding-top: 1em; }
+        .page-play #text-container #text-dialog #scores-button .btn {
+          font-size: inherit; }
+  .page-play #side-chat {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 200;
+    height: 100%;
+    width: 380px;
+    max-width: 30%;
+    background-color: rgba(9, 9, 9, 0.7);
+    padding: 0;
+    padding-top: 96px; }
+    .page-play #side-chat #chat-options {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      overflow: auto; }
+      .page-play #side-chat #chat-options li {
+        text-align: justify;
+        text-justify: inter-word;
+        color: #ffffff;
+        background-color: transparent;
+        border: none;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        -ms-border-radius: 0;
+        border-radius: 0;
+        border-top: 1px solid #ffffff;
+        padding: 0;
+        margin: 0;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        margin-left: 32px;
+        margin-right: 32px; }
+        .page-play #side-chat #chat-options li:first-child {
+          border-top-width: 3px; }
+  .page-play #side-chat.minimized {
+    width: 64px; }
+    .page-play #side-chat.minimized #chat-options,
+    .page-play #side-chat.minimized #button-audio {
+      display: none; }
+    .page-play #side-chat.minimized #button-chat {
+      left: 16px; }
+  .page-play #button-close {
+    top: 32px;
+    left: 32px; }
+  .page-play #button-chat {
+    top: 32px;
+    left: 32px; }
+  .page-play #button-audio {
+    top: 32px;
+    right: 32px; }
+  .page-play #customer-logo {
+    bottom: 32px;
+    left: 32px; }
+
+.page-scores {
+  background-color: #000000; }
+  .page-scores #scores-container {
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    background-image: url("./images/results.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover; }
+  .page-scores #button-close {
+    top: 32px;
+    left: 32px; }
+  .page-scores #button-audio {
+    top: 32px;
+    right: 32px; }
+  .page-scores #customer-logo {
+    bottom: 32px;
+    left: 32px;
+    alpha: 0.5; }
+
+@media all and (max-width: 1279px) {
+  html, body {
+    font-size: 14px; }
+  .ttexp-btn span {
+    font-size: 28px; }
+  .page-play #side-chat {
+    padding-top: 84px; }
+    .page-play #side-chat #chat-options li {
+      padding-top: 28px;
+      padding-bottom: 28px;
+      margin-left: 28px;
+      margin-right: 28px; }
+  .page-play #button-close {
+    top: 28px;
+    left: 28px; }
+  .page-play #button-chat {
+    top: 28px;
+    left: 28px; }
+  .page-play #button-audio {
+    top: 28px;
+    right: 28px; }
+  .page-play #customer-logo {
+    bottom: 28px;
+    left: 28px; } }
+
+@media all and (max-width: 1023px) {
+  html, body {
+    font-size: 12px; }
+  .ttexp-btn span {
+    font-size: 18px; }
+  .page-play #side-chat {
+    padding-top: 54px; }
+    .page-play #side-chat #chat-options li {
+      padding-top: 18px;
+      padding-bottom: 18px;
+      margin-left: 18px;
+      margin-right: 18px; }
+  .page-play #button-close {
+    top: 18px;
+    left: 18px; }
+  .page-play #button-chat {
+    top: 18px;
+    left: 18px; }
+  .page-play #button-audio {
+    top: 18px;
+    right: 18px; }
+  .page-play #customer-logo {
+    bottom: 18px;
+    left: 18px; } }
+
+@media all and (max-width: 639px) {
+  html, body {
+    font-size: 10px; }
+  .ttexp-btn span {
+    font-size: 14px; }
+  .page-play #side-chat {
+    padding-top: 42px; }
+    .page-play #side-chat #chat-options li {
+      padding-top: 14px;
+      padding-bottom: 14px;
+      margin-left: 14px;
+      margin-right: 14px; }
+  .page-play #button-close {
+    top: 14px;
+    left: 14px; }
+  .page-play #button-chat {
+    top: 14px;
+    left: 14px; }
+  .page-play #button-audio {
+    top: 14px;
+    right: 14px; }
+  .page-play #customer-logo {
+    bottom: 14px;
+    left: 14px; } }
