--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -6973,7 +6973,8 @@ a:active {
 
 html,
 body {
-  background-color: 000; }
+  background-color: 000;
+  height: 100%; }
 
 .table td.fit,
 .table th.fit {
@@ -6981,7 +6982,7 @@ body {
   width: 1%; }
 
 [data-ember-action]:not(:disabled) {
-  /* 	cursor: pointer; */ }
+  cursor: pointer; }
 
 .ttexp-btn {
   padding: 0; }
@@ -7059,16 +7060,50 @@ html, body {
     opacity: 0.25; }
 
 /* http://willschenk.com/bootstrap-advanced-grid-tricks/ */
-.page-index #logo-app {
-  margin-top: 10px; }
+.page-index .container-fluid,
+.page-index .row {
+  height: 100%; }
+
+.page-index .sidebar {
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1000;
+  display: block;
+  background-color: rgba(9, 9, 9, 0.25);
+  border-right: 1px solid #181818; }
+
+.page-index #menu-header {
+  padding: 20px 15px;
+  background-color: #181818; }
 
 .page-index #main-menu {
   margin: 0 auto 10px;
   text-align: center;
   text-transform: uppercase; }
+  .page-index #main-menu a {
+    border-radius: 0;
+    background-color: transparent;
+    border-color: #181818;
+    border-width: 1px 0; }
+    .page-index #main-menu a:hover, .page-index #main-menu a:focus {
+      background-color: #2c2c2c;
+      color: #fff; }
+
+.page-index #logo-app {
+  margin-top: 10px; }
+
+.page-index .content {
+  padding-right: 0; }
 
 .page-index #main-content {
-  margin: 0 auto 10px; }
+  margin: 60px 0 0 5px;
+  height: 530px; }
+  .page-index #main-content .panel-body {
+    padding-left: 0;
+    padding-right: 0; }
 
 .page-play {
   background-color: #000000; }
