--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -7059,6 +7059,20 @@ html, body {
     width: 100%;
     opacity: 0.25; }
 
+#debug-window {
+  display: block;
+  z-index: 1000;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 20%;
+  width: 380px;
+  max-width: 30%;
+  padding: 4px;
+  background-color: rgba(9, 9, 9, 0.7);
+  color: #fff;
+  overflow-y: auto; }
+
 /* http://willschenk.com/bootstrap-advanced-grid-tricks/ */
 .page-index .container-fluid,
 .page-index .row {
@@ -7105,6 +7119,52 @@ html, body {
     padding-left: 0;
     padding-right: 0; }
 
+/* http://willschenk.com/bootstrap-advanced-grid-tricks/ */
+.page-scenarios .container-fluid,
+.page-scenarios .row {
+  height: 100%; }
+
+.page-scenarios .sidebar {
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1000;
+  display: block;
+  background-color: rgba(9, 9, 9, 0.25);
+  border-right: 1px solid #181818; }
+
+.page-scenarios #menu-header {
+  padding: 20px 15px;
+  background-color: #181818; }
+
+.page-scenarios #main-menu {
+  margin: 0 auto 10px;
+  text-align: center;
+  text-transform: uppercase; }
+  .page-scenarios #main-menu a {
+    border-radius: 0;
+    background-color: transparent;
+    border-color: #181818;
+    border-width: 1px 0; }
+    .page-scenarios #main-menu a:hover, .page-scenarios #main-menu a:focus {
+      background-color: #2c2c2c;
+      color: #fff; }
+
+.page-scenarios #logo-app {
+  margin-top: 10px; }
+
+.page-scenarios .content {
+  padding-right: 0; }
+
+.page-scenarios #main-content {
+  margin: 60px 0 0 5px;
+  height: 530px; }
+  .page-scenarios #main-content .panel-body {
+    padding-left: 0;
+    padding-right: 0; }
+
 .page-play {
   background-color: #000000; }
   .page-play #video-container {
@@ -7137,46 +7197,72 @@ html, body {
     position: absolute;
     top: 0px;
     left: 0px;
-    z-index: 101;
-    -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d; }
+    z-index: 101; }
     .page-play #text-container::after {
-      content: "";
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      position: absolute;
-      z-index: -1;
-      background-image: url("./images/background-text-version.jpg");
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: left center;
-      background-size: cover;
-      opacity: 0.35; }
+      /*
+			content: "";
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			position: absolute;
+			z-index: -1;   
+			*/ }
     .page-play #text-container #text-dialog {
-      padding: 80px 40px;
-      color: #fff;
+      padding: 40px;
       min-width: 70%;
       width: calc(100% - 380px);
-      position: relative;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%);
       font-size: 2em;
-      text-align: center; }
+      text-align: center;
+      color: #fff;
+      text-shadow: -1px -1px 0 #000,   1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; }
       .page-play #text-container #text-dialog #text-baloon {
         display: inline-block;
         margin: 0 auto;
-        max-width: 660px;
         text-align: justify;
         text-justify: inter-word; }
-      .page-play #text-container #text-dialog #scores-button {
-        padding-top: 1em; }
-        .page-play #text-container #text-dialog #scores-button .btn {
-          font-size: inherit; }
+    .page-play #text-container.fullscreen {
+      -webkit-transform-style: preserve-3d;
+      -moz-transform-style: preserve-3d;
+      transform-style: preserve-3d; }
+      .page-play #text-container.fullscreen::after {
+        content: "";
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+        background-image: url("./images/background-text-version.png");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: left center;
+        background-size: cover;
+        opacity: 0.35; }
+      .page-play #text-container.fullscreen #text-dialog {
+        position: relative;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%); }
+        .page-play #text-container.fullscreen #text-dialog #text-baloon {
+          max-width: 660px; }
+    .page-play #text-container.subtitles #text-dialog {
+      position: absolute;
+      bottom: 0;
+      /*
+				&::after {
+					content: "";
+					top: 0;
+					left: 0;
+					bottom: 0;
+					right: 0;
+					position: absolute;
+					z-index: -1;   
+					background-color: #000;
+				    opacity: 0.35;
+				}
+				*/ }
   .page-play #side-chat {
     position: absolute;
     right: 0;
