--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -7190,6 +7190,26 @@ html, body {
       .page-play #video-container.cinemaOn #video-player {
         max-width: 100%;
         width: 100%; }
+  .page-play #overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #2e3338;
+    z-index: 10000;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d; }
+    .page-play #overlay #overlay-button {
+      position: relative;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      text-align: center; }
+      .page-play #overlay #overlay-button a {
+        font-size: 2em; }
   .page-play #text-container {
     overflow: hidden;
     width: 100%;
