--- a/www/assets/ttexp.css
+++ b/www/assets/ttexp.css
@@ -6973,8 +6973,7 @@ body {
   -ms-user-select: none;
   /* Internet Explorer/Edge */
   user-select: none;
-  /* Non-prefixed version, currently
-                                  not supported by any browser */ }
+  /* Non-prefixed version, currently not supported by any browser */ }
 
 a,
 a:link,
@@ -7085,7 +7084,19 @@ html, body {
   background-color: rgba(9, 9, 9, 0.7);
   color: #fff;
   overflow-y: auto;
-  font-size: 0.8em; }
+  font-size: 0.8em;
+  -webkit-touch-callout: text;
+  /* iOS Safari */
+  -webkit-user-select: text;
+  /* Chrome/Safari/Opera */
+  -khtml-user-select: text;
+  /* Konqueror */
+  -moz-user-select: text;
+  /* Firefox */
+  -ms-user-select: text;
+  /* Internet Explorer/Edge */
+  user-select: text;
+  /* Non-prefixed version, currently not supported by any browser */ }
 
 /* http://willschenk.com/bootstrap-advanced-grid-tricks/ */
 .page-index .container-fluid,
